# simplest_drone

./: Cargo.toml  README.md  drone.sh
.cargo/: config.toml
src/: arming.rs  attitude.rs  consts.rs  device.rs  imu.rs  log.rs  main.rs  motor.rs  pid.rs  rc.rs  setup.rs  telemetry.rs  usb.rs
