[package]
name = "simplest_drone"
version = "0.1.0"
edition = "2024"

[features]
logging = ["dep:embassy-usb", "dep:embassy-usb-logger"]
verbose = ["logging"]
log_imu = ["logging"]
log_att = ["logging"]
log_pid = ["logging"]
log_dshot = ["logging"]
log_mix = ["logging"]

[dependencies]
ahrs = { version = "0.7.0", default-features = false }

cortex-m-rt = "0.7.0"

dshot-pio = { git = "https://github.com/peterkrull/dshot-pio", features = ["embassy-rp"] }

embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.3.0", features = ["critical-section-impl", "time-driver"] }
embassy-time = "0.4.0"
embassy-futures = "0.1.1"
embassy-usb = {version = "0.4.0", optional = true }
embassy-usb-logger = {version = "0.4.0", optional = true }
embassy-sync = "0.7.0"

icm20948-async = { git = "https://github.com/peterkrull/icm20948-async" }

log = {version = "0.4.27"}

nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }

panic-probe = "1.0.0"

sbus-parser = "0.1.0"